[gd_scene load_steps=10 format=3 uid="uid://cf0cd88kico3g"]

[ext_resource type="Script" path="res://Scenes/TestScenes/testINVENTORY/inventorytest.gd" id="1_cih7o"]
[ext_resource type="Texture2D" uid="uid://dq8m8yadhxuss" path="res://Assets/UI/MiniPanel06.jpg" id="1_f7cvc"]
[ext_resource type="Texture2D" uid="uid://dn1ely4x28j4u" path="res://Assets/UI/MiniPanel01.jpg" id="3_3dbg3"]
[ext_resource type="Script" path="res://Scenes/TestScenes/testINVENTORY/ItemPreview.gd" id="3_f7yfy"]
[ext_resource type="FontFile" uid="uid://j5854hdtucyt" path="res://Assets/Font/Montserrat-VariableFont_wght.ttf" id="5_gthxp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4yo34"]
texture = ExtResource("1_f7cvc")
modulate_color = Color(1, 1, 1, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_7h2q4"]
font = ExtResource("5_gthxp")
font_size = 48

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sl5gv"]
texture = ExtResource("3_3dbg3")

[sub_resource type="LabelSettings" id="LabelSettings_vc0rb"]
font = ExtResource("5_gthxp")
font_size = 38

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cih7o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4yo34")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="CrewmateContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Inventaire"
label_settings = SubResource("LabelSettings_7h2q4")

[node name="ItemNumber" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(0)"
label_settings = SubResource("LabelSettings_7h2q4")

[node name="ItemBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.9

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 12

[node name="ItemPreview" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_sl5gv")
script = ExtResource("3_f7yfy")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ItemContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer"]
layout_mode = 2

[node name="ItemFlavorContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer"]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer/ItemFlavorContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer/ItemFlavorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer/ItemFlavorContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_vc0rb")

[node name="ItemFlavor" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer/ItemFlavorContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemStats" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PriceContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer"]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer/PriceContainer"]
layout_mode = 2
text = "Price :"

[node name="ItemPrice" type="Label" parent="Panel/MarginContainer/VBoxContainer/ItemBox/ItemPreview/MarginContainer/ItemContainer/PriceContainer"]
unique_name_in_owner = true
layout_mode = 2
